--- a/cfg/base.yaml
+++ b/cfg/base.yaml
@@ -3,8 +3,8 @@ N_WORKERS: 8
 VIS_RESULT: True
 # INPUT_IMG_DIR: "./data/input_img_dir"
 # LAYOUT_DIR: "./data/layout_dir"
-INPUT_IMG_DIR: "/mnt/e/WORK_DL/datasets/18. Sitronics/1_20"
-LAYOUT_DIR: "/mnt/e/WORK_DL/datasets/18. Sitronics/layouts"
+INPUT_IMG_DIR: "/root/data/18.Sitronics/1_20"
+LAYOUT_DIR: "/root/data/18.Sitronics/layouts"
 OUTPUT_DIR: "./data/results"
 VIS_DIR: "./data/vis"
 TMP_DIR: "./tmp"
