--- a/cfg/base.yaml
+++ b/cfg/base.yaml
@@ -1,10 +1,8 @@
 # 
-N_WORKERS: 8
+N_WORKERS: 16
 VIS_RESULT: True
-# INPUT_IMG_DIR: "./data/input_img_dir"
-# LAYOUT_DIR: "./data/layout_dir"
-INPUT_IMG_DIR: "/mnt/e/WORK_DL/datasets/18. Sitronics/1_20"
-LAYOUT_DIR: "/mnt/e/WORK_DL/datasets/18. Sitronics/layouts"
+INPUT_IMG_DIR: "./data/input_img_dir"
+LAYOUT_DIR: "./data/layout_dir"
 OUTPUT_DIR: "./data/results"
 VIS_DIR: "./data/vis"
 TMP_DIR: "./tmp"
@@ -13,6 +11,7 @@ TMP_DIR: "./tmp"
 CROP_W: 250
 CROP_H: 250
 STEP: 500
+LAYOUT_SCALE: [0.25, 0.25] # w, h
 # READ_CHANNELS: R, G, B, Nir, RGB
 READ_CHANNELS: RGB
 NUM_MATCHES_THRESH: 100
