--- a/cfg/base.yaml
+++ b/cfg/base.yaml
@@ -11,7 +11,8 @@ TMP_DIR: "./tmp"
 CROP_W: 250
 CROP_H: 250
 STEP: 500
-LAYOUT_SCALE: [0.25, 0.25] # w, h
+LAYOUT_SCALE: [1, 1] # w, h
+INPUT_SCALE: [1, 1] # w, h
 # READ_CHANNELS: R, G, B, Nir, RGB
 READ_CHANNELS: RGB
 NUM_MATCHES_THRESH: 100
