--- a/cfg/base.yaml
+++ b/cfg/base.yaml
@@ -1,10 +1,8 @@
 # 
-N_WORKERS: 4
+N_WORKERS: 8
 VIS_RESULT: True
-# INPUT_IMG_DIR: "./data/input_img_dir"
-# LAYOUT_DIR: "./data/layout_dir"
-INPUT_IMG_DIR: "/mnt/e/WORK_DL/datasets/18. Sitronics/1_20"
-LAYOUT_DIR: "/mnt/e/WORK_DL/datasets/18. Sitronics/layouts"
+INPUT_IMG_DIR: "./data/input_img_dir"
+LAYOUT_DIR: "./data/layout_dir"
 
 OUTPUT_DIR: "./data/results"
 VIS_DIR: "./data/vis"
@@ -13,12 +11,12 @@ TMP_DIR: "./tmp"
 # ALGORITHM
 CROP_W: 250
 CROP_H: 250
-STEP: 1000
-LAYOUT_SCALE: [0.5, 0.5] # w, h
-INPUT_SCALE: [4, 4] # w, h
+STEP: 750
+LAYOUT_SCALE: [0.25, 0.25] # w, h
+INPUT_SCALE: [2, 2] # w, h
 # READ_CHANNELS: R, G, B, Nir, RGB
 READ_CHANNELS: RGB
-NUM_MATCHES_THRESH: 10
+NUM_MATCHES_THRESH: 75
 KP_PAIRS_TO_KP_CROP: 0.5 # 0 < x < 1
 FEATURE_EXTRACTOR:
   name: "ASIFT"
