--- a/cfg/base.yaml
+++ b/cfg/base.yaml
@@ -13,12 +13,12 @@ TMP_DIR: "./tmp"
 # ALGORITHM
 CROP_W: 250
 CROP_H: 250
-STEP: 1000
-LAYOUT_SCALE: [0.5, 0.5] # w, h
-INPUT_SCALE: [4, 4] # w, h
+STEP: 750
+LAYOUT_SCALE: [0.25,0.25] # w, h
+INPUT_SCALE: [2, 2] # w, h
 # READ_CHANNELS: R, G, B, Nir, RGB
 READ_CHANNELS: RGB
-NUM_MATCHES_THRESH: 10
+NUM_MATCHES_THRESH: 20
 KP_PAIRS_TO_KP_CROP: 0.5 # 0 < x < 1
 FEATURE_EXTRACTOR:
   name: "ASIFT"
